# mlsherlock

./: .gitignore  AGENTS.md  README.md  REVIEW.md  pyproject.toml  requirements.txt
datasets/: AGENTS.md
datasets/housing/: AGENTS.md
datasets/penguins/: AGENTS.md
datasets/titanic/: AGENTS.md
demo/: get_data.py
mlsherlock/: README.md  __init__.py  cli.py
mlsherlock/adapters/: cli_callbacks.py  notebook_callbacks.py
mlsherlock/engine/: callbacks.py  loop.py  providers.py  state.py  system_prompt.py
mlsherlock/execution/: capture.py  sandbox.py
mlsherlock/tools/: ask_user.py  download_data.py  finish.py  read_data.py  registry.py  run_python.py  save_plot.py
mlsherlock/ui/: cli_callbacks.py
mlsherlock/utils/: display.py
tests/: conftest.py
tests/fixtures/: generate_sample.py  sample.csv
tests/test_engine/: test_sandbox.py  test_state.py
tests/test_tools/: test_download_data.py  test_read_data.py  test_registry.py  test_run_python.py
